--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,21 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.MovieItem {
+  width: 300px;
+}
+
+.Image {
+  width: 100%;
+}
+
+.ButtonBlock {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn--like--checked {
+  color: white;
+  background: blue;
+}
